--- a/core/uniffi.toml
+++ b/core/uniffi.toml
@@ -2,4 +2,4 @@
 doc_comments = true
 
 [bindings.kotlin]
-package_name = "com.ironcorelabs.cloaked_ai"
+package_name = "com.ironcorelabs.ironcore_alloy"
