--- a/.github/workflows/sdk-release.yaml
+++ b/.github/workflows/sdk-release.yaml
@@ -47,7 +47,7 @@ jobs:
         with:
           cache-provider: buildjet
       - name: Generate Kotlin files
-        run: cargo run --bin uniffi-bindgen generate --library resources/linux-x86-64/libcloaked_ai.so --language kotlin --out-dir kotlin
+        run: cargo run --bin uniffi-bindgen generate --library resources/linux-x86-64/libironcore_alloy.so --language kotlin --out-dir kotlin
         working-directory: core/kotlin/src/main
       - name: Publish
         run: ./gradlew publish
@@ -63,20 +63,20 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-          path: ${{ github.workspace }}/core/python/cloaked-ai
+          path: ${{ github.workspace }}/core/python/ironcore-alloy
       - name: Rename directories
         run: |
           mv buildjet-2vcpu-ubuntu-2204- linux-x86-64
           mv buildjet-4vcpu-ubuntu-2204-arm- linux-arm
           mv macos-12- darwin-x86-64
           mv self-hosted,macOS,ARM64- darwin-aarch64
-        working-directory: core/python/cloaked-ai
+        working-directory: core/python/ironcore-alloy
       - uses: Swatinem/rust-cache@v2
         with:
           cache-provider: buildjet
       - name: Generate Python files
-        run: cargo run --bin uniffi-bindgen generate --library ../linux-x86-64/libcloaked_ai.so --language python --out-dir .
-        working-directory: core/python/cloaked-ai/cloaked_ai
+        run: cargo run --bin uniffi-bindgen generate --library ../linux-x86-64/libironcore_alloy.so --language python --out-dir .
+        working-directory: core/python/ironcore-alloy/ironcore_alloy
       - name: Install hatch
         run: pipx install hatch
       - name: Make wheels
@@ -85,12 +85,12 @@ jobs:
           for arch in $archs; do
             mv ../$arch/* ./
             CDYLIB_PLATFORM=$arch hatch build -t wheel
-            rm libcloaked_ai.*
+            rm libironcore_alloy.*
           done
-        working-directory: core/python/cloaked-ai/cloaked_ai
+        working-directory: core/python/ironcore-alloy/ironcore_alloy
       - name: Release to PyPi
         run: hatch publish --repo main --user __token__ --auth "${{ secrets.PYPI_TOKEN }}"
-        working-directory: core/python/cloaked-ai/cloaked_ai
+        working-directory: core/python/ironcore-alloy/ironcore_alloy
 
   mark-github-release:
     if: github.event.release != null
