--- a/core/python/cloaked-ai/.readthedocs.yaml
+++ b/core/python/cloaked-ai/.readthedocs.yaml
@@ -6,6 +6,34 @@ build:
   tools:
     python: "3.10"
   commands:
+    # these rust sections are mostly cribbed from our github action https://github.com/IronCoreLabs/rust-toolchain/blob/main/action.yml
+    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+    - |
+        # once https://github.com/mikefarah/yq/pull/1439 is merged, the yq already on the system will have toml support
+        pip install yq
+        for F in rust-toolchain.toml rust-toolchain ; do
+          if [ -f "$F" ] ; then
+            TOML_FILE="$F"
+            break
+          fi
+        done
+        if [ -z "$TOML_FILE" ]; then
+          echo "rust-toolchain{.toml} not found, expecting explicit inputs"
+          exit 0
+        fi
+        TOML_TOOLCHAIN=$(tomlq -r '.toolchain.channel | select(. != null)' $TOML_FILE)
+        if [ -n "$TOML_TOOLCHAIN" ]; then
+          echo "toml-toolchain=$TOML_TOOLCHAIN" >> $GITHUB_OUTPUT
+        fi
+        TOML_TARGETS=$(tomlq -r '.toolchain.targets | select(. != null) | @csv' $TOML_FILE)
+        if [ -n "$TOML_TARGETS" ]; then
+          echo "toml-targets=$TOML_TARGETS" >> $GITHUB_OUTPUT
+        fi
+        TOML_COMPONENTS=$(tomlq -r '.toolchain.components | select(. != null) | @csv' $TOML_FILE)
+        if [ -n "$TOML_COMPONENTS" ]; then
+          echo "toml-components=$TOML_COMPONENTS" >> $GITHUB_OUTPUT
+        fi 
+    # actual doc building part
     - pip install -v "hatch==1.7.0"
     - cd core/python/cloaked-ai && hatch run docs:build --site-dir $READTHEDOCS_OUTPUT/html
 
