--- a/core/python/cloaked-ai/.readthedocs.yaml
+++ b/core/python/cloaked-ai/.readthedocs.yaml
@@ -6,9 +6,10 @@ build:
   tools:
     python: "3.10"
   commands:
-    # these rust sections are mostly cribbed from our github action https://github.com/IronCoreLabs/rust-toolchain/blob/main/action.yml
-    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain none
+    # install rust
     - ./core/python/cloaked-ai/rust-toolchain-from-file.sh
+    - cargo b --release
+    - cargo run --bin uniffi-bindgen generate --library ../target/release/libcloaked_ai.so --language python  --out-dir python/cloaked-ai/cloaked_ai
     # actual doc building part
     - pip install -v "hatch==1.7.0"
     - cd core/python/cloaked-ai && hatch run docs:build --site-dir $READTHEDOCS_OUTPUT/html
