--- a/core/python/cloaked-ai/.readthedocs.yaml
+++ b/core/python/cloaked-ai/.readthedocs.yaml
@@ -6,7 +6,8 @@ build:
   tools:
     python: "3.10"
   commands:
-    # install rust
+    # install rust. If we automate/otherwise committing the generated python module we can avoid rust at all and
+    # only would need to install hatch here. Doc builds would then be a few seconds instead of a few minutes.
     - ./core/python/cloaked-ai/rust-toolchain-from-file.sh
     - ~/.cargo/bin/cargo b --release
     - ~/.cargo/bin/cargo run --bin uniffi-bindgen generate --library ./target/release/libcloaked_ai.so --language python  --out-dir core/python/cloaked-ai/cloaked_ai
