--- a/.github/workflows/sdk-release.yaml
+++ b/.github/workflows/sdk-release.yaml
@@ -22,14 +22,14 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-          path: ${{ github.workspace }}/core/kotlin/src/main/resources/
+          path: ${{ github.workspace }}/kotlin/src/main/resources/
       - name: Rename directories
         run: |
           mv buildjet-2vcpu-ubuntu-2204- linux-x86-64
           mv buildjet-4vcpu-ubuntu-2204-arm- linux-arm
           mv macos-12- darwin-x86-64
           mv self-hosted,macOS,ARM64- darwin-aarch64
-        working-directory: core/kotlin/src/main/resources/
+        working-directory: kotlin/src/main/resources/
       - name: Decrypt GPG key and gradle.properties
         uses: IronCoreLabs/ironhide-actions/decrypt@v3
         with:
@@ -37,7 +37,7 @@ jobs:
           input: .github/9FA43559.asc.iron .github/gradle.properties.iron
       - name: Move gradle properties and GPG key
         run: |
-          mv .github/gradle.properties core/kotlin/gradle.properties
+          mv .github/gradle.properties kotlin/gradle.properties
       - name: Import GPG key
         run: |
           gpg --batch --import .github/9FA43559.asc
@@ -48,10 +48,10 @@ jobs:
           cache-provider: buildjet
       - name: Generate Kotlin files
         run: cargo run --bin uniffi-bindgen generate --library resources/linux-x86-64/libironcore_alloy.so --language kotlin --out-dir kotlin
-        working-directory: core/kotlin/src/main
+        working-directory: kotlin/src/main
       - name: Publish
         run: ./gradlew publish
-        working-directory: core/kotlin
+        working-directory: kotlin
         env:
           ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
@@ -63,20 +63,20 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-          path: ${{ github.workspace }}/core/python/ironcore-alloy
+          path: ${{ github.workspace }}/python/ironcore-alloy
       - name: Rename directories
         run: |
           mv buildjet-2vcpu-ubuntu-2204- linux-x86-64
           mv buildjet-4vcpu-ubuntu-2204-arm- linux-arm
           mv macos-12- darwin-x86-64
           mv self-hosted,macOS,ARM64- darwin-aarch64
-        working-directory: core/python/ironcore-alloy
+        working-directory: python/ironcore-alloy
       - uses: Swatinem/rust-cache@v2
         with:
           cache-provider: buildjet
       - name: Generate Python files
         run: cargo run --bin uniffi-bindgen generate --library ../linux-x86-64/libironcore_alloy.so --language python --out-dir .
-        working-directory: core/python/ironcore-alloy/ironcore_alloy
+        working-directory: python/ironcore-alloy/ironcore_alloy
       - name: Install hatch
         run: pipx install hatch
       - name: Make wheels
@@ -87,10 +87,10 @@ jobs:
             CDYLIB_PLATFORM=$arch hatch build -t wheel
             rm libironcore_alloy.*
           done
-        working-directory: core/python/ironcore-alloy/ironcore_alloy
+        working-directory: python/ironcore-alloy/ironcore_alloy
       - name: Release to PyPi
         run: hatch publish --repo main --user __token__ --auth "${{ secrets.PYPI_TOKEN }}"
-        working-directory: core/python/ironcore-alloy/ironcore_alloy
+        working-directory: python/ironcore-alloy/ironcore_alloy
 
   mark-github-release:
     if: github.event.release != null
