--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ z85 = "3.0.5"
 
 [[bench]]
 name = "ironcore_alloy_bench"
-path = "../benches/ironcore_alloy_bench.rs"
+path = "benches/ironcore_alloy_bench.rs"
 harness = false
 
 # This is needed to allow extra options to be passed to criterion
@@ -61,6 +61,15 @@ crate-type = ["cdylib", "lib"]
 name = "ironcore_alloy"
 
 [[bin]]
-# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
 name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
+
+# used to create the smallest cdylib binary we can to ship with the library in each ecosystem.
+# 6.9M vs 1.5M in initial testing. Can further have `strip` (the Unix utility) run on it to save ~0.2 MB more.
+# WARNING: be careful changing this, since downstream integration tests (in "core/tests") depend on this profile.
+[profile.release]
+opt-level = 3       # Check 'z' sometimes in case much smaller. Initial testing showed 0.1M size difference but 25% performance hit, so 3 is better.
+lto = true          # Enable Link Time Optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations.
+panic = 'abort'     # Abort on panic
+strip = 'debuginfo'
