--- a/.github/workflows/sdk-ci.yaml
+++ b/.github/workflows/sdk-ci.yaml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: ${{ join(matrix.runs-on) }}-
-          path: ${{ github.workspace }}/core/kotlin/src/main/resources/
+          path: ${{ github.workspace }}/kotlin/src/main/resources/
       - if: startsWith(matrix.runs-on, 'buildjet')
         uses: Swatinem/rust-cache@v2
         with:
@@ -42,11 +42,11 @@ jobs:
         with:
           cache-provider: github
       - name: Generate Kotlin files
-        run: cargo run --bin uniffi-bindgen generate --library resources/libcloaked_ai.* --language kotlin --out-dir kotlin
-        working-directory: core/kotlin/src/main
+        run: cargo run --bin uniffi-bindgen generate --library resources/libironcore_alloy.* --language kotlin --out-dir kotlin
+        working-directory: kotlin/src/main
       - name: Run Kotlin tests
         run: ./gradlew test
-        working-directory: core/kotlin
+        working-directory: kotlin
 
   python-test:
     needs: generate-cdylibs
@@ -61,7 +61,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: ${{ join(matrix.runs-on) }}-
-          path: ${{ github.workspace }}/core/python/cloaked-ai/cloaked_ai
+          path: ${{ github.workspace }}/python/ironcore-alloy/ironcore_alloy
       - if: startsWith(matrix.runs-on, 'buildjet')
         uses: Swatinem/rust-cache@v2
         with:
@@ -71,8 +71,8 @@ jobs:
         with:
           cache-provider: github
       - name: Generate Python files
-        run: cargo run --bin uniffi-bindgen generate --library libcloaked_ai.* --language python --out-dir .
-        working-directory: core/python/cloaked-ai/cloaked_ai
+        run: cargo run --bin uniffi-bindgen generate --library libironcore_alloy.* --language python --out-dir .
+        working-directory: python/ironcore-alloy/ironcore_alloy
       - name: Install hatch
         if: matrix.runs-on == 'buildjet-4vcpu-ubuntu-2204-arm'
         # The buildjet arm machine has a permissions error if we don't use sudo
@@ -101,4 +101,4 @@ jobs:
             3.11
       - name: Run Python tests
         run: hatch run test:test
-        working-directory: core/python/cloaked-ai/cloaked_ai
+        working-directory: python/ironcore-alloy/ironcore_alloy
