--- a/python/ironcore-alloy/pyproject.toml
+++ b/python/ironcore-alloy/pyproject.toml
@@ -61,6 +61,15 @@ test = "coverage --no-cov {args}"
 [[tool.hatch.envs.test.matrix]]
 python = ["37", "38", "39", "310", "311"]
 
+[tool.hatch.envs.bench]
+dependencies = [
+    "pyperf==2.6.2"
+]
+
+[tool.hatch.envs.bench.scripts]
+bench = "rm bench.json; python bench.py -o bench.json"
+stats = "pyperf stats bench.json"
+
 [tool.coverage.run]
 branch = true
 parallel = true
