--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ async-trait = "0.1.74"
 base64 = "0.21"
 base64_type = { git = "https://github.com/IronCoreLabs/base64_type", version = "0.1.0" }
 bytes = { version = "1.4.0", features = ["serde"] }
+futures = "0.3.29"
 hmac = { version = "0.12.1", features = ["std"] }
 ironcore-documents = { git = "https://github.com/IronCoreLabs/ironcore-documents.git", branch = "add-vector-header" }
 itertools = "0.11"
