--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ base64 = "0.21"
 base64_type = { git = "https://github.com/IronCoreLabs/base64_type", version = "0.1.0" }
 bytes = { version = "1.4.0", features = ["serde"] }
 hmac = { version = "0.12.1", features = ["std"] }
-ironcore-documents = { git = "https://github.com/IronCoreLabs/ironcore-documents.git", branch = "add-vector-header" }
+ironcore-documents = { git = "https://github.com/IronCoreLabs/ironcore-documents.git", rev = "28f4fe607a6a2671cbe77e28d404bab658fbb668" }
 itertools = "0.11"
 ndarray = "0.15.6"
 ndarray-rand = "0.14.0"
