--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ base64_type = { git = "https://github.com/IronCoreLabs/base64_type", version = "
 bytes = { version = "1.4.0", features = ["serde"] }
 futures = "0.3.29"
 hmac = { version = "0.12.1", features = ["std"] }
-ironcore-documents = { git = "https://github.com/IronCoreLabs/ironcore-documents.git", rev = "357dfb0b33fd538767d15a7b613ed92e6375ced7" }
+ironcore-documents = { git = "https://github.com/IronCoreLabs/ironcore-documents.git", branch = "signing_vec" }
 itertools = "0.11"
 ndarray = "0.15.6"
 ndarray-rand = "0.14.0"
