--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ironcore-alloy"
 version = "0.9.2-pre.19"
-description = "IronCore SDK for all your different Application Layer Encryption needs"
+description = "IronCore Labs SDK for all your different Application Layer Encryption needs"
 authors = ["IronCore Labs <info@ironcorelabs.com>"]
 edition = "2021"
 # We exclude Cargo.lock instead of deleting it because we want consistent builds for generated SDKs
