--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,25 @@
 [package]
 name = "ironcore-alloy"
 version = "0.9.2-pre.19"
+description = "IronCore Labs SDK for all your different Application Layer Encryption needs"
+authors = ["IronCore Labs <info@ironcorelabs.com>"]
 edition = "2021"
+# We exclude Cargo.lock instead of deleting it because we want consistent builds for generated SDKs
+exclude = ["Cargo.lock"]
+license = "AGPL-3.0-only"
+documentation = "https://docs.rs/ironcore-alloy"
+readme = "README.md"
+repository = "https://github.com/IronCoreLabs/ironcore-alloy"
+categories = ["cryptography"]
+keywords = [
+    "cryptography",
+    "saas-shield",
+    "ALE",
+    "application-layer-encryption",
+    "cloaked-ai",
+    "tenant-security-client",
+]
+rust-version = "1.75.0"
 
 [dependencies]
 aes-gcm = { version = "0.10" }
