--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ async-trait = "0.1.74"
 base64 = "0.21"
 base64_type = { git = "https://github.com/IronCoreLabs/base64_type", version = "0.1.0" }
 bytes = { version = "1.4.0", features = ["serde"] }
+convert_case = "0.6.0"
 futures = "0.3.29"
 hmac = { version = "0.12.1", features = ["std"] }
 ironcore-documents = { git = "https://github.com/IronCoreLabs/ironcore-documents.git", rev = "76e2e20fe97e15e27f3d6146562f054144977103" }
@@ -20,6 +21,7 @@ protobuf = { version = "3.3", features = ["with-bytes"] }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rand_distr = "0.4.3"
+regex = "1.10.2"
 reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
@@ -54,6 +56,7 @@ uniffi_bindgen = { git = "https://github.com/skeet70/uniffi-rs.git", rev = "5c3a
 z85 = "3.0.5"
 
 [features]
+default = ["integration_tests"]
 integration_tests = []
 
 [[bench]]
