--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ aes-gcm = { version = "0.10" }
 aes-siv = { version = "0.7" }
 async-trait = "0.1.74"
 base64 = "0.21"
-base64_type = { git = "https://github.com/IronCoreLabs/base64_type", version = "0.1.0" }
+base64_type = { git = "https://github.com/IronCoreLabs/base64_type", version = "0.1.2-pre.1" }
 bytes = { version = "1.4.0", features = ["serde"] }
 convert_case = "0.6.0"
 futures = "0.3.29"
@@ -58,7 +58,7 @@ z85 = "3.0.5"
 [dev-dependencies]
 approx = "0.5.1"
 ascii85 = "0.2.1"
-assertables = "7.0.1" 
+assertables = "7.0.1"
 base64 = "0.21.5"
 base85 = "2.0.0"
 camino = "1.1"
