--- a/examples/rust/standalone/qdrant-example/Cargo.toml
+++ b/examples/rust/standalone/qdrant-example/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 base64 = "0.21.7"
-ironcore-alloy = { path = "../../.." }
+futures = "0.3.30"
+hex-literal = "0.4.1"
+ironcore-alloy = { path = "../../../../" }
 qdrant-client = "1.7.0"
 serde_json = "1.0.113"
 tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
 tonic = "0.10.2"
+uuid = { version = "1.7.0", features = ["v4"] }
