--- a/example-integrations/qdrant/Cargo.toml
+++ b/example-integrations/qdrant/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.79"
 base64 = "0.21.7"
 futures = "0.3.30"
 hex-literal = "0.4.1"
-ironcore-alloy = { path = "../../../../" }
+ironcore-alloy = { path = "../../" }
 qdrant-client = "1.7.0"
 serde_json = "1.0.113"
 tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
