--- a/example-integrations/weaviate/pyproject.toml
+++ b/example-integrations/weaviate/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "ironcore-alloy>=0.10.3,<0.11",
     "weaviate_client==4.4.0",
     "sentence_transformers==2.3.1",
+    "pydantic==2.6.1",
 ]
 dynamic = ["version"]
