--- a/.github/workflows/sdk-ci.yaml
+++ b/.github/workflows/sdk-ci.yaml
@@ -2,6 +2,9 @@ name: Python/Kotlin CI
 on:
   pull_request:
   workflow_dispatch:
+  push:
+    branches:
+      - "macos14-test"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -12,7 +15,8 @@ jobs:
     uses: IronCoreLabs/workflows/.github/workflows/rust-artifact.yaml@rust-artifact-v0
     with:
       # This should stay in sync with the `runs-on` from the other jobs in this file
-      os_matrix: '["buildjet-2vcpu-ubuntu-2204"]' # TODO: add back: "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", ["self-hosted", "macOS", "ARM64"]]'
+      #   os_matrix: '["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]'
+      os_matrix: '["macos-14"]'
       build_profile: "release"
     secrets: inherit
 
@@ -22,7 +26,8 @@ jobs:
     strategy:
       matrix:
         # This should stay in sync with the `os_matrix` above
-        runs-on: ["buildjet-2vcpu-ubuntu-2204"] # TODO: add back: "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", ["self-hosted", "macOS", "ARM64"] ]
+        # runs-on: ["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]
+        runs-on: ["macos-14"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -55,7 +60,8 @@ jobs:
       fail-fast: false
       matrix:
         # This should stay in sync with the `os_matrix` above and the `runs-on` from the other jobs in this file
-        runs-on: ["buildjet-2vcpu-ubuntu-2204"] # TODO: add back: "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", ["self-hosted", "macOS", "ARM64"] ]
+        # runs-on: ["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]
+        runs-on: ["macos-14"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v4
