Try to install Python and pipx on macos-14

--- a/.github/workflows/sdk-ci.yaml
+++ b/.github/workflows/sdk-ci.yaml
@@ -79,16 +79,9 @@ jobs:
       - name: Generate Python files
         run: cargo run --bin uniffi-bindgen generate --library libironcore_alloy.* --language python --out-dir .
         working-directory: python/ironcore-alloy/ironcore_alloy
-      - name: Install hatch
-        if: matrix.runs-on == 'buildjet-4vcpu-ubuntu-2204-arm'
-        # The buildjet arm machine has a permissions error if we don't use sudo
-        run: sudo pipx install hatch
-      - name: Install hatch
-        if: matrix.runs-on != 'buildjet-4vcpu-ubuntu-2204-arm'
-        run: pipx install hatch
       - name: Install Python test matrix
+        if: endsWith(matrix.runs-on, 'arm') != true && matrix.runs-on != 'macos-14'
         uses: actions/setup-python@v4
-        if: endsWith(matrix.runs-on, 'arm') != true  && contains(matrix.runs-on, 'self-hosted') != true
         with:
           # there are no builds for arm linux at all, so we'll make do with the system ones
           python-version: |
@@ -96,14 +89,26 @@ jobs:
             3.9
             3.10
             3.11
-      - name: Install Python test matrix (self-hosted)
-        if: contains(matrix.runs-on, 'self-hosted')
+      - name: Install Python test matrix (macos-14)
+        if: matrix.runs-on == 'macos-14'
         uses: actions/setup-python@v4
         with:
           # arm mac builds don't exist for pre-3.10
           python-version: |
             3.10
             3.11
+      - name: Install pipx (macos-14)
+        if: matrix.runs-on == 'macos-14'
+        run: |
+          brew install pipx
+          pipx ensurepath
+      - name: Install hatch
+        if: matrix.runs-on != 'buildjet-4vcpu-ubuntu-2204-arm'
+        run: pipx install hatch
+      - name: Install hatch (buildjet-4vcpu-ubuntu-2204-arm)
+        if: matrix.runs-on == 'buildjet-4vcpu-ubuntu-2204-arm'
+        # The buildjet arm machine has a permissions error if we don't use sudo
+        run: sudo pipx install hatch
       - name: Run Python tests
         run: hatch run test:test
         working-directory: python/ironcore-alloy/ironcore_alloy
