--- a/.github/workflows/sdk-ci.yaml
+++ b/.github/workflows/sdk-ci.yaml
@@ -2,9 +2,6 @@ name: Python/Kotlin CI
 on:
   pull_request:
   workflow_dispatch:
-  push:
-    branches:
-      - "macos14-test"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -15,8 +12,7 @@ jobs:
     uses: IronCoreLabs/workflows/.github/workflows/rust-artifact.yaml@rust-artifact-v0
     with:
       # This should stay in sync with the `runs-on` from the other jobs in this file
-      #   os_matrix: '["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]'
-      os_matrix: '["macos-14"]'
+      os_matrix: '["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]'
       build_profile: "release"
     secrets: inherit
 
@@ -26,11 +22,16 @@ jobs:
     strategy:
       matrix:
         # This should stay in sync with the `os_matrix` above
-        # runs-on: ["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]
-        runs-on: ["macos-14"]
+        runs-on:
+          [
+            "buildjet-2vcpu-ubuntu-2204",
+            "buildjet-4vcpu-ubuntu-2204-arm",
+            "macos-12",
+            "macos-14",
+          ]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "17"
@@ -60,10 +61,15 @@ jobs:
       fail-fast: false
       matrix:
         # This should stay in sync with the `os_matrix` above and the `runs-on` from the other jobs in this file
-        # runs-on: ["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]
-        runs-on: ["macos-14"]
+        runs-on:
+          [
+            "buildjet-2vcpu-ubuntu-2204",
+            "buildjet-4vcpu-ubuntu-2204-arm",
+            "macos-12",
+            "macos-14",
+          ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           name: ${{ join(matrix.runs-on) }}-
@@ -81,7 +87,7 @@ jobs:
         working-directory: python/ironcore-alloy/ironcore_alloy
       - name: Install Python test matrix
         if: endsWith(matrix.runs-on, 'arm') != true && matrix.runs-on != 'macos-14'
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           # there are no builds for arm linux at all, so we'll make do with the system ones
           python-version: |
@@ -91,7 +97,7 @@ jobs:
             3.11
       - name: Install Python test matrix (macos-14)
         if: matrix.runs-on == 'macos-14'
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           # arm mac builds don't exist for pre-3.10
           python-version: |
