--- a/.github/workflows/sdk-ci.yaml
+++ b/.github/workflows/sdk-ci.yaml
@@ -12,7 +12,7 @@ jobs:
     uses: IronCoreLabs/workflows/.github/workflows/rust-artifact.yaml@rust-artifact-v0
     with:
       # This should stay in sync with the `runs-on` from the other jobs in this file
-      os_matrix: '["buildjet-2vcpu-ubuntu-2204"]' # TODO: add back: "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", ["self-hosted", "macOS", "ARM64"]]'
+      os_matrix: '["buildjet-2vcpu-ubuntu-2204", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]'
       build_profile: "release"
     secrets: inherit
 
@@ -22,10 +22,16 @@ jobs:
     strategy:
       matrix:
         # This should stay in sync with the `os_matrix` above
-        runs-on: ["buildjet-2vcpu-ubuntu-2204"] # TODO: add back: "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", ["self-hosted", "macOS", "ARM64"] ]
+        runs-on:
+          [
+            "buildjet-2vcpu-ubuntu-2204",
+            "buildjet-4vcpu-ubuntu-2204-arm",
+            "macos-12",
+            "macos-14",
+          ]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "17"
@@ -55,9 +61,15 @@ jobs:
       fail-fast: false
       matrix:
         # This should stay in sync with the `os_matrix` above and the `runs-on` from the other jobs in this file
-        runs-on: ["buildjet-2vcpu-ubuntu-2204"] # TODO: add back: "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", ["self-hosted", "macOS", "ARM64"] ]
+        runs-on:
+          [
+            "buildjet-2vcpu-ubuntu-2204",
+            "buildjet-4vcpu-ubuntu-2204-arm",
+            "macos-12",
+            "macos-14",
+          ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           name: ${{ join(matrix.runs-on) }}-
@@ -73,16 +85,9 @@ jobs:
       - name: Generate Python files
         run: cargo run --bin uniffi-bindgen generate --library libironcore_alloy.* --language python --out-dir .
         working-directory: python/ironcore-alloy/ironcore_alloy
-      - name: Install hatch
-        if: matrix.runs-on == 'buildjet-4vcpu-ubuntu-2204-arm'
-        # The buildjet arm machine has a permissions error if we don't use sudo
-        run: sudo pipx install hatch
-      - name: Install hatch
-        if: matrix.runs-on != 'buildjet-4vcpu-ubuntu-2204-arm'
-        run: pipx install hatch
       - name: Install Python test matrix
-        uses: actions/setup-python@v4
-        if: endsWith(matrix.runs-on, 'arm') != true  && contains(matrix.runs-on, 'self-hosted') != true
+        if: endsWith(matrix.runs-on, 'arm') != true && matrix.runs-on != 'macos-14'
+        uses: actions/setup-python@v5
         with:
           # there are no builds for arm linux at all, so we'll make do with the system ones
           python-version: |
@@ -90,14 +95,26 @@ jobs:
             3.9
             3.10
             3.11
-      - name: Install Python test matrix (self-hosted)
-        if: contains(matrix.runs-on, 'self-hosted')
-        uses: actions/setup-python@v4
+      - name: Install Python test matrix (macos-14)
+        if: matrix.runs-on == 'macos-14'
+        uses: actions/setup-python@v5
         with:
           # arm mac builds don't exist for pre-3.10
           python-version: |
             3.10
             3.11
+      - name: Install pipx (macos-14)
+        if: matrix.runs-on == 'macos-14'
+        run: |
+          brew install pipx
+          echo "/Users/runner/.local/bin" >> $GITHUB_PATH
+      - name: Install hatch
+        if: matrix.runs-on != 'buildjet-4vcpu-ubuntu-2204-arm'
+        run: pipx install hatch
+      - name: Install hatch (buildjet-4vcpu-ubuntu-2204-arm)
+        if: matrix.runs-on == 'buildjet-4vcpu-ubuntu-2204-arm'
+        # The buildjet arm machine has a permissions error if we don't use sudo
+        run: sudo pipx install hatch
       - name: Run Python tests
         run: hatch run test:test
         working-directory: python/ironcore-alloy/ironcore_alloy
