Update to run less runs

--- a/benches/demo-tsp.conf
+++ b/benches/demo-tsp.conf
@@ -6,4 +6,4 @@ SERVICE_SEGMENT_ID=698
 API_KEY=0WUaXesNgbTAuLwn
 IRONCORE_ENV=stage
 RUST_LOG=warn
-TSP_ENABLE_LOGDRIVER_INTEGRATION=false
+#TSP_ENABLE_LOGDRIVER_INTEGRATION=false
