--- a/.github/workflows/sdk-ci.yaml
+++ b/.github/workflows/sdk-ci.yaml
@@ -111,9 +111,9 @@ jobs:
       - name: Install hatch
         if: matrix.runs-on != 'buildjet-4vcpu-ubuntu-2204-arm' && matrix.runs-on != 'macos-14'
         run: pipx install hatch
-      - name: Install hatch (buildjet-4vcpu-ubuntu-2204-arm)
+      - name: Install hatch (ARM)
         if: matrix.runs-on == 'buildjet-4vcpu-ubuntu-2204-arm' || matrix.runs-on == 'macos-14'
-        # The buildjet arm machine has a permissions error if we don't use sudo
+        # The arm machines have a permissions error if we don't use sudo
         run: sudo pipx install hatch
       - name: Run Python tests
         run: hatch run test:test
