--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   bump:
-    uses: IronCoreLabs/workflows/.github/workflows/bump-version.yaml@bump-version-check
+    uses: IronCoreLabs/workflows/.github/workflows/bump-version.yaml@bump-version-v1
     with:
       version: ${{ inputs.version }}
       release_mode: prerelease
