--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ bytes = { version = "1.4.0", features = ["serde"] }
 convert_case = "0.6.0"
 futures = "0.3.29"
 hmac = { version = "0.12.1", features = ["std"] }
-ironcore-documents = "0.1"
+ironcore-documents = "0.2"
 itertools = "0.12"
 ndarray = "0.15.6"
 ndarray-rand = "0.14.0"
@@ -32,6 +32,7 @@ protobuf = { version = "3.3", features = ["with-bytes"] }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rand_distr = "0.4.3"
+rayon = "1.10.0"
 regex = "1.10.2"
 reqwest = { version = "0.12", default-features = false, features = [
     "json",
@@ -41,10 +42,7 @@ ring = "0.17"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = { version = "1.0.96", features = ["float_roundtrip"] }
 thiserror = "1.0.50"
-uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = [
-    "cli",
-    "tokio",
-] }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = ["tokio"] }
 z85 = "3.0.5"
 
 [dev-dependencies]
@@ -60,6 +58,7 @@ hex-literal = "0.4.1"
 lazy_static = "1.4"
 proptest = "1.2.0"
 tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = ["cli"] }
 uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs" }
 z85 = "3.0.5"
 
@@ -81,13 +80,14 @@ name = "ironcore_alloy"
 [[bin]]
 name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
+required-features = ["uniffi/cli"]
 
 # used to create the smallest cdylib binary we can to ship with the library in each ecosystem.
 # 6.9M vs 1.5M in initial testing. Can further have `strip` (the Unix utility) run on it to save ~0.2 MB more.
 # WARNING: be careful changing this, since downstream integration tests (in "core/tests") depend on this profile.
 [profile.release]
-opt-level = 3       # Check 'z' sometimes in case much smaller. Initial testing showed 0.1M size difference but 25% performance hit, so 3 is better.
-lto = true          # Enable Link Time Optimization
-codegen-units = 1   # Reduce number of codegen units to increase optimizations.
-panic = 'abort'     # Abort on panic
-strip = 'debuginfo'
+opt-level = 3     # Our crypto basically requires opt-level 3 for reasonable speeds
+lto = true        # Enable Link Time Optimization
+codegen-units = 1 # Reduce number of codegen units to increase optimizations.
+panic = 'abort'   # Abort on panic
+strip = 'symbols'
