--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,4 +91,4 @@ opt-level = 3     # Our crypto basically requires opt-level 3 for reasonable spe
 lto = true        # Enable Link Time Optimization
 codegen-units = 1 # Reduce number of codegen units to increase optimizations.
 panic = 'abort'   # Abort on panic
-strip = 'symbols'
+strip = 'debug'
